--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <main class="main">
         <div class="wrapper">
-            <video src="images/farm.mp4" playisinline muted loop autoplay></video>
+            <video src="images/farm.mp4" autoplay muted loop playsinline></video>
         </div>
         <div class="form">
             <form action="">
